Fix notebook image paths to repo-relative figure paths

--- a/Tensor_Networks/Tensor_Networks.ipynb
+++ b/Tensor_Networks/Tensor_Networks.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# Tensor Contraction\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_1.png\" width=\"500\" />\n",
+    "<img src=\"figure/tn_1.png\" width=\"500\" />\n",
     "\n",
     "reprinted from \"https://www.tensors.net/section-1\""
    ]
@@ -99,7 +99,7 @@
     "$$\n",
     "(For a matrix $A$, this reduces to $||A||_F^2 = \\mathrm{Tr}(A^\\dagger A)$.)\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_2.png\" width=\"500\" />\n",
+    "<img src=\"figure/tn_2.png\" width=\"500\" />\n",
     "\n",
     "Reprinted from https://www.tensors.net/tutorial-2\n"
    ]
@@ -214,7 +214,7 @@
     "B_{i j} = \\sum_{k=1}^{r_0} U_{i k} s_k V^*_{k j}.\n",
     "$$\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_3.png\" width=\"500\" />\n",
+    "<img src=\"figure/tn_3.png\" width=\"500\" />\n",
     "\n",
     "Reprinted from https://www.tensors.net/tutorial-2\n",
     "\n",
@@ -602,7 +602,7 @@
     "\n",
     "A **tree tensor network** is a tensor network whose underlying graph is **acyclic** (no closed loops). Equivalently, between any two tensors there is a **unique path** of internal indices.\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_7.png\" width=\"500\" />\n",
+    "<img src=\"figure/tn_7.png\" width=\"500\" />\n",
     "\n",
     "Let a tree network $T={A,B,C,\\dots}$ contract (over internal indices) to an output tensor $H$ with open indices collectively denoted by $o$:\n",
     "$$\n",
@@ -721,7 +721,7 @@
     "$$\n",
     "but the contracted tensor $H$ is unchanged. This freedom is exactly what the section calls “introducing a resolution of the identity on an internal index.” \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_8.png\" width=\"500\" />\n",
+    "<img src=\"figure/tn_8.png\" width=\"500\" />\n",
     "\n",
     "\n"
    ]
@@ -802,7 +802,7 @@
     "\n",
     "The “pulling through” method makes *every tensor on every branch* into a properly oriented isometry by repeated QR factorizations and absorption of the residual. \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_4.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_4.png\" width=\"700\" />\n",
     "\n",
     "**Step (i): Orient arrows toward the center.**\n",
     "Each internal index is assigned a direction so that arrows point inward along the tree toward the chosen center tensor $A$.\n",
@@ -950,7 +950,7 @@
     "\n",
     "Fix a center tensor $A$ and consider one attached branch with effective tensor $B_{a,o}$ (bond index $a$ into $A$, branch open indices $o$).\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_5.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_5.png\" width=\"700\" />\n",
     "\n",
     "### (i) Branch density matrix\n",
     "\n",
@@ -1168,7 +1168,7 @@
     "where $\\mathrm{Ttr}(T^\\dagger, T)$ means “contract $T$ with its conjugate over all matching indices.”\n",
     "\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_6.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_6.png\" width=\"700\" />\n",
     "\n",
     "### Theorem 3.4 (local error = global error at a CoO)\n",
     "\n",
@@ -1335,7 +1335,7 @@
     "\n",
     "This is essentially “do a truncated SVD, then absorb the singular values into the next tensor-to-decompose so it becomes the next center.” \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_9.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_9.png\" width=\"700\" />\n",
     "\n",
     "### Sequential SVD → TT/MPS (TT-SVD viewpoint)\n",
     "\n",
@@ -1522,7 +1522,7 @@
     "\n",
     "This section extends the “center of orthogonality” from a **tensor** to an **internal link** by inserting an explicit **link matrix** $\\sigma$ on that bond (initially $\\sigma=I$, so nothing changes), then fixing $\\sigma$ as a center using orthogonalization, and finally choosing gauge so $\\sigma$ is **diagonal** with **positive** entries in descending order. \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_10.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_10.png\" width=\"700\" />\n",
     "\n",
     "Concretely, for a link that partitions a loop-free network into a left subnetwork and a right subnetwork, let:\n",
     "\n",
@@ -1642,7 +1642,7 @@
     "\n",
     "A loop-free network is in **canonical form** if **every internal link** is simultaneously a link-centered CoO (each link has its own diagonal $\\sigma$ of singular values). \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_11.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_11.png\" width=\"700\" />\n",
     "\n",
     "### Procedure \n",
     "\n",
@@ -1831,7 +1831,7 @@
     "\n",
     "Computationally this is exactly a local tensor contraction (e.g. `tensordot`) applied term-by-term and summed. Tensors.net explicitly highlights using `tensordot` for this local application. \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_12.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_12.png\" width=\"700\" />\n",
     "\n",
     "#### Cost scaling\n",
     "\n",
@@ -1911,7 +1911,7 @@
     "$$\n",
     "and convergence is typically monitored via $|r|$ (ARPACK handles this internally). \n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_13.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_13.png\" width=\"700\" />\n",
     "\n",
     "### 5) Practical ED limits \n",
     "\n",
@@ -2114,7 +2114,7 @@
     "$$\n",
     "where the left block states and right block states are orthonormal because of the $A$/$B$ constraints. This is the key reason the local optimization reduces to a small effective eigenproblem. ([Tensor Network][2])\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_14.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_14.png\" width=\"700\" />\n",
     "\n",
     "## 3) Variational principle $\\Rightarrow$ local eigenproblem\n",
     "\n",
@@ -2207,7 +2207,7 @@
     "$$\n",
     "\n",
     "\n",
-    "<img src=\"/Users/zenith/Desktop/Tensor_Networks/figure/tn_15.png\" width=\"700\" />\n",
+    "<img src=\"figure/tn_15.png\" width=\"700\" />\n",
     "\n",
     "\n",
     "## 5) Local-Hamiltonian (two-body term) version: what changes\n",
